--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="sidebarFragment">
+	<script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
 	<aside class="navbar navbar-vertical navbar-expand-lg" data-bs-theme="dark">
 		<div class="container-fluid" style="background-color: rgb(0, 37, 171)">
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#sidebar-menu" aria-controls="sidebar-menu" aria-expanded="false" aria-label="Toggle navigation">
