--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -8,10 +8,6 @@
 		<link rel="stylesheet" href="css/jquery-ui-1.13.3/jquery-ui.css" type="text/css" />
 		<link rel="stylesheet" href="js/slickgrid/dist/styles/css/slick.grid.css" type="text/css" />
 		<link rel="stylesheet" href="js/slickgrid/dist/styles/css/slick-alpine-theme.css" type="text/css" />
-
-		<link rel="stylesheet" href="js/slickgrid/dist/styles/css/slick.grid.css" type="text/css" />
-		<link rel="stylesheet" href="js/slickgrid/dist/styles/css/slick-alpine-theme.css" type="text/css" />
-
 		
 		<!-- // tabler framework css files import -->
 		<link href="css/css-tabler/tabler.min.css?1692870487" rel="stylesheet" />
@@ -39,24 +35,13 @@
 		<script src="js/slickgrid/dist/browser/plugins/slick.cellselectionmodel.js"></script>
 		<script src="js/slickgrid/dist/browser/slick.editors.js"></script>
 		<script src="js/slickgrid/dist/browser/slick.formatters.js"></script>
-		<script src="js/slickgrid/dist/browser/slick.dataview.js"></script>
-		<script src="js/slickgrid/dist/browser/plugins/slick.checkboxselectcolumn.js"></script>
-		<script src="js/slickgrid/dist/browser/plugins/slick.rowselectionmodel.js"></script>
-		<script src="js/slickgrid/dist/browser/slick.compositeeditor.js"></script>
-		<script src="js/slickgrid/dist/browser/controls/slick.pager.js"></script>
-		<script src="js/xlsx.full.min.js"></script>
 		
-		<!-- <script src="js/js-tabler/demo-theme.min.js?1692870487"></script> -->
+		
 		<script src="js/js-tabler/tabler.min.js?1692870487" defer></script>		
 		<script src="js/libs-tabler/apexcharts/dist/apexcharts.min.js?1692870487" defer></script>
 		<script src="js/libs-tabler/jsvectormap/dist/js/jsvectormap.min.js?1692870487" defer></script>
 		<script src="js/libs-tabler/jsvectormap/dist/maps/world.js?1692870487" defer></script>
 		<script src="js/libs-tabler/jsvectormap/dist/maps/world-merc.js?1692870487" defer></script>
-        <script src="js/utils.js" defer></script>
-
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-
-
 
 		<style>
 			@import url("https://rsms.me/inter/inter.css");
@@ -106,16 +91,19 @@
 				--alpine-cell-border-width: 0 1px 1px 0;
 				--alpine-cell-border-color: #d4d4d4;
 			}
-			#divMyGrid {
-				background: white;
-				outline: 0;
-				/* border: 1px solid rgb(200, 200, 200); */
-				background-color: rgb(213, 213, 213);
-				margin-top: 20px;
-				/* width: 1300px; */
-				height: 700px;
-				width: 100%;
-			}
+			
+			/* main {
+			        border: solid 0.5px #000000;
+			        width: 1200px;
+			        height: 700px;
+				}
+			
+			    footer{
+			        height: 30px;
+			        margin: 2px;
+			        border: solid 0.5px #000000;
+			        background-color: #BFD8F2;
+			    } */
 			input::file-selector-button {
 				font-weight: 500;
 				color: rgb(255, 255, 255);
@@ -129,42 +117,6 @@
 			
 			input::file-selector-button:hover {
 				background-color: rgb(90, 90, 90);
-			}
-			.item-details-label {
-				margin-left: 10px;
-				margin-top: 15px;
-				display: block;
-				font-weight: bold;
-			}
-			
-			.item-details-editor-container {
-				border: 1px solid silver;
-				background: white;
-				display: block;
-				margin: 4px 10px;
-				margin-top: 4px;
-				padding: 0;
-				padding-left: 4px;
-				padding-right: 0px;
-				line-height: 20px;
-			}
-			
-			.item-details-editor-container textarea {
-				height: inherit;
-			}
-			
-			.invalid {
-				color: red;
-			}
-			
-			.item-details-editor-container.invalid {
-				border: 1px solid red;
-			}
-			
-			.item-details-validation {
-				color: red;
-				font-style: italic;
-				margin-left: 12px;
 			}
 		</style>
 	</head>
