Revert "fix: minor typo fix"
This reverts commit 138f4a6666b20bd6c583383d15606924fba449e8.

--- a/src/main/resources/templates/views/wrk/fil/WRKFIL002M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL002M0.html
@@ -5,7 +5,7 @@ layout:decorate="~{layout/file_layout}"
 >
 	<th:block layout:fragment="content">
 		<div class="page">
-			<script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
+			<script src="js/demo-theme.min.js?1692870487"></script>
 			<div class="page-wrapper" id="page-wrapper">
 				<div class="container" id="'container">
 					<h2>File Input</h2>
