--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,6 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
   <head> </head>
-  <th:block th:fragment="footer">
+  <th:block th:fragment="footerFragment">
     <!-- #footer -->
     <div id="footer">
       <footer class="footer footer-transparent d-print-none">
