--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,5 @@
 <html xmlns:th="http://www.thymeleaf.org">
-  <th:block th:fragment="header">
+  <th:block th:fragment="headerFragment">
     <!-- <div class="page"> -->
     <header class="navbar navbar-expand-md d-print-none">
       <div class="container-xl">
