--- a/src/main/resources/templates/views/wrk/fil/WRKFIL002M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL002M0.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
 <th:block layout:fragment="content">
 	<div class="page">
-		<script src="js/demo-theme.min.js?1692870487"></script>
+		<script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
 		<div class="page-wrapper" id="page-wrapper">
 			<div class="container" id="'container">
 				<h2>File Input</h2>
